Fix 404 page on mobile viewports

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -59,6 +59,7 @@ body {
   color: white;
 }
 
+// make sure that all pages have the contact us footer at the bottom of the screen
 .root {
-  min-height: calc(100vh - 120px);
+  min-height: calc(100vh - 120px - 94px);
 }
